functionality almost complete. Need to write code to show top three from leaderboard. And finish css touch ups.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <div class="row justify-content-center" id="submitBtn">
             <button class="col-4">Submit</button>
         </div>
+        <div class="row justify-content-center" id="restartBtn">
+            <button onClick = "window.location.reload()" class="col-4" id="restart">Retake Test</button>
+        </div>
         <div class="row justify-content-center">
             <div class="col-4">
                 <h3 id="timerCountdown"></h3>
