--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
+    <title>JavaScript Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +28,7 @@
     </header>
     <br>
     <main>
-        <div class="row">
+        <div class="row mainsec">
             <h2 class="col-md-6 d-flex align-items-center justify-content-md-end justify-content-center" id="questionEl">The Rules</h2>
             
             <ul class="col-md-6" id="rulesEl">
@@ -80,7 +80,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-4">
-                <h3 id="timerCountdown"></h3>
+                <h4 id="timerCountdown"></h4>
             </div>
         </div>
         
